--- a/architecture/LACAMA/index.html
+++ b/architecture/LACAMA/index.html
@@ -114,7 +114,7 @@
   <div class="blankHL"></div>
 
   <!--body-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
 
     <!--site -->
