--- a/architecture/index.html
+++ b/architecture/index.html
@@ -116,8 +116,7 @@
   <!--head-->
   <!--body-->
 
-  <div class="blankHL"></div>
-  <div class="blankPhoneS"></div>
+  <div class="blankProject"></div>
 
   <div class="landingIntro">
     <div class="intro">
@@ -157,7 +156,7 @@
 
   <!--architecture 1-->
   <div id="ytrigger-arch">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
       <a href="./recreation_commons"><img src="./ar_01.svg" class="widthS float"> </a>
       <div class="blankVer">
       </div>
@@ -182,7 +181,7 @@
 
   <!--architecture 2-->
   <div id="ytrigger-arch2">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./narrow_stripes/"> NARROW STRIPES </a>
@@ -195,15 +194,15 @@
       </div>
       <div class="blankVer">
       </div>
-      <a href="./narrow_stripes/"> <img class="shadowOnly float" src="./ar_02.jpg"> </a>
+      <a href="./narrow_stripes/"> <img class="ShadowBox float" src="./ar_02.jpg"> </a>
     </div>
   </div>
   <!--architecture 2-->
   <div class="blankHXL"></div>
   <!--THESIS 3-->
   <div id="ytrigger-arch3">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a href="./thesis_studio/"><img class="shadowOnly float" src="./ar_07.jpg"></a>
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <a href="./thesis_studio/"><img class="ShadowBox float" src="./ar_07.jpg"></a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -223,7 +222,7 @@
   <div class="blankHXL"></div>
   <!--MANIFOLD GROUND 4-->
   <div id="ytrigger-arch4">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./manifold_ground/">MANIFOLD GROUND </a>
         <p class="lineHorizAll"></p>
@@ -235,7 +234,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <a class="t-title" href="./manifold_ground/"> <img class="shadowOnly float" src="./ar_04.jpg"></a>
+      <a class="t-title" href="./manifold_ground/"> <img class="ShadowBox float" src="./ar_04.jpg"></a>
     </div>
   </div>
   <!--MANIFOLD GROUND 4-->
@@ -244,8 +243,8 @@
   <!--RECOVERY OF RIVER EDGES 5-->
   <div id="ytrigger-arch5">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a class="t-title" href="./recovery_of_river_edges/"> <img class="shadowOnly float"
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <a class="t-title" href="./recovery_of_river_edges/"> <img class="ShadowBox float"
           src="./ar_03.jpg"></a>
       <div class="blankVer">
       </div>
@@ -266,7 +265,7 @@
   <div class="blankHXL"></div>
   <!--CURVES 6-->
   <div id="ytrigger-arch6">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <a class="titleL" data-aos="fade-up" href="./the_rotation_of_curves/">THE ROTATION OF
@@ -279,7 +278,7 @@
       </div>
       <div class="blankVer">
       </div>
-      <a class="titleL" href="./the_rotation_of_curves/"> <img class="shadowOnly float"
+      <a class="titleL" href="./the_rotation_of_curves/"> <img class="ShadowBox float"
           src="./ar_05.jpg"></a>
     </div>
 
@@ -289,8 +288,8 @@
   <!--LACMA 7-->
   <div id="ytrigger-arch7">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a class="titleL" href="./LACAMA/"> <img class="shadowOnly float" src="./ar_08.jpg"></a>
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <a class="titleL" href="./LACAMA/"> <img class="ShadowBox float" src="./ar_08.jpg"></a>
       <div class="blankVer">
       </div>
       <div class="column widthM">
@@ -309,7 +308,7 @@
 
   <!--architecture 8-->
   <div id="ytrigger-arch8">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
         <p class="titleL" data-aos="fade-up">KAPPE HOUSE STUDY </p>
