--- a/architecture/manifold_ground/index.html
+++ b/architecture/manifold_ground/index.html
@@ -114,10 +114,10 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankPhone"></div>
+  <div class="blankProject"></div>
   <div class="blankHXL"></div>
 
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--site -->
     <div class="rowChng centerVer">
