--- a/architecture/narrow_stripes/index.html
+++ b/architecture/narrow_stripes/index.html
@@ -114,12 +114,12 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankPhone"></div>
+  <div class="blankProject"></div>
   <div class="blankHXL"></div>
 
 
   <!--diagram 1-->
-  <div class="rowChng centerVer marginAll marginAll1920">
+  <div class="rowChng centerVer marginAll marginAll">
     <div class="float">
       <img src="render.jpg" alt="DIAGRAM">
     </div>
@@ -137,7 +137,7 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Programs and Diagrams </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -147,7 +147,7 @@
 
 
   <!--diagram 2-->
-  <div class="rowChng rowChngRV centerVer marginAll marginAll1920">
+  <div class="rowChng rowChngRV centerVer marginAll marginAll">
     <div class="column widthM">
       <p class="titleM">PROGRAMS</p>
       <p class="lineHorizAll"></p>
@@ -163,13 +163,13 @@
 
 
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll1920">
+  <div class="row  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Renders</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!--Section Perspective -->
-  <div class="rowChng centerVer marginAll marginAll1920">
+  <div class="rowChng centerVer marginAll marginAll">
     <div class="column float">
       <img src="render1.jpg" alt="DIAGRAM">
     </div>
@@ -184,14 +184,14 @@
   <!--Section Perspective -->
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site and Floor Plan </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
   <!--Plan-->
-  <div class="rowChng rowChngRV centerVer marginAll marginAll1920">
+  <div class="rowChng rowChngRV centerVer marginAll marginAll">
     <div class="column widthM">
       <p class="titleM">SITE PLAN</p>
       <p class="lineHorizAll"></p>
@@ -206,7 +206,7 @@
   <!--Plan-->
   <div class="blankHXL"></div>
   <!--Plan site-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="site.jpg" alt="DIAGRAM">
     <div class="blankHS"></div>
     <p class="titleM"> SITE</p>
