--- a/architecture/recovery_of_river_edges/index.html
+++ b/architecture/recovery_of_river_edges/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <div class="blankHL"></div>
 
 
@@ -154,13 +154,13 @@
   </div>
   <!--density-->
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site and Research </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
 
   <!-- content-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--site -->
     <div class="column">
@@ -196,7 +196,7 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Photos of Sequences and Movements </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -205,7 +205,7 @@
 
 
   <!--Section Perspective -->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="research_photos.jpg" alt="Photos">
     <div class="column widthM">
       <P class="titleM">Photos of Sequences and Movements</P>
@@ -219,14 +219,14 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Manipulation </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
 
   <!-- content-->
   <!--research-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="research.jpg" alt="DIAGRAM">
     <div class="blankHS"> </div>
     <div class="widthM">
@@ -240,7 +240,7 @@
   <div class="blankHL"></div>
 
   <!--research-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
 
     <img src="research_1.jpg" alt="DIAGRAM">
     <div class="blankHS"> </div>
@@ -255,7 +255,7 @@
   <!--research-->
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> On Site </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -264,7 +264,7 @@
 
 
   <!--programs-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="programs.jpg" alt="DIAGRAM">
     <div class="blankHS"> </div>
     <div class="column widthM">
@@ -277,7 +277,7 @@
   <div class="blankHL"></div>
 
   <!--programs-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="diagram_1.jpg" alt="DIAGRAM">
     <div class="blankHXS"> </div>
 
@@ -292,7 +292,7 @@
   <!--programs-->
   <div class="blankHL"></div>
   <!--plan -->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="plan.jpg" alt="DIAGRAM">
     <div class="blankHS">
     </div>
@@ -306,7 +306,7 @@
   <div class="blankHL"></div>
 
   <!--render-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <img src="render.jpg" alt="DIAGRAM">
 
     <div class="column">
