--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -114,13 +114,13 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="blankPhone"></div>
+  <div class="blankProject"></div>
   <div class="blankHL"></div>
 
 
 
   <!--diagram 1-->
-  <div class="rowChng centerVer centerHorz marginAll marginAll1920">
+  <div class="rowChng centerVer centerHorz marginAll marginAll">
     <img src="diagram.jpg" alt="DIAGRAM" class=" widthM">
 
     <div class="column widthM">
@@ -135,12 +135,12 @@
 
   <div class="blankHL"></div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Programs </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--diagram 1-->
     <div class="column centerVer centerHorz">
@@ -173,14 +173,14 @@
   </div>
   <div class="blankHL"></div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Diagrams </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
   <div class="blankHS"></div>
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--environmental diagram-->
     <div class="rowChng centerVer">
@@ -238,14 +238,14 @@
   </div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Renders </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
 
 
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--renders 2-->
     <div class="column">
@@ -299,12 +299,12 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Plans and Sections </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--plans and sections 1-->
     <div class="column centerVer centerHorz">
@@ -368,12 +368,12 @@
 
   </div>
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Site </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!--site-->
     <div class="column centerVer centerHorz">
