--- a/architecture/the_rotation_of_curves/index.html
+++ b/architecture/the_rotation_of_curves/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <div class="blankHL"></div>
 
     <!--site -->
