--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -112,11 +112,11 @@
   </div>
   <!--head-->
   <span id="circle" class="circle"></span>
-  <div class="blankPhone"></div>
+  <div class="blankProject"></div>
   <div class="blankHXL"></div>
   <div class="blankHXL"></div>
 
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <!-- cover -->
     <div class="rowChng">
@@ -421,7 +421,7 @@
 
 
   <!--project1 -->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <p class="titleL"> My Understanding of Architecture </p>
     <p class="lineHorizAll"></p>
     <p class="textM"> Different types of sequences can be extended into larger systems.
@@ -443,7 +443,7 @@
   <div class="blankHL"></div>
 
   <!--video-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <P class="titleL"> DIFFERENTIATED CONTINUITY </P>
     <p class="lineHorizAll"></p>
     <p class="textM">Differentiated continuity apply on different scales</p>
@@ -458,7 +458,7 @@
   <!--video-->
   
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll1920">
+  <div class="row  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Drawings of multiple scales</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -469,7 +469,7 @@
 
 
   <!--Scale-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <p class="titleL">DRAWING</p>
     <p class="lineHorizAll"></p>
     <p class="textM">Large-Scale</p>
@@ -482,7 +482,7 @@
   <div class="blankHXL"></div>
 
   <!--Scale-->
-  <div class="column marginAll1920 marginAll">
+  <div class="column marginAll marginAll">
     <p class="titleL">DRAWING </p>
     <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
@@ -494,7 +494,7 @@
   <div class="blankHXL"></div>
 
   <!--Scale-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <P class="titleL">DRAWING </P>
     <p class="textM">Large-Scale</p>
     <div class="blankHM"></div>
@@ -506,7 +506,7 @@
   <div class="blankHM"></div>
 
   <!--Scale-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
 
     <P class="titleL">DRAWING </P>
     <p class="lineHorizAll"></p>
@@ -520,7 +520,7 @@
   <div class="blankHL"></div>
 
   <!--Scale-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <p class="titleL">DRAWING</p>
     <p class="lineHorizAll"></p>
     <p class="textM">Mid-Scale</p>
@@ -531,7 +531,7 @@
   <div class="blankHL"></div>
 
   <!--Scale-->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
 
     <p class="titleL">DRAWING </p>
     <p class="lineHorizAll"></p>
@@ -544,13 +544,13 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row  heightM centerVer marginAll marginAll1920">
+  <div class="row  heightM centerVer marginAll marginAll">
     <p class="tArrow"> Photo Documentation</p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!--photos -->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <P class="titleL">PHOTOS</P>
     <p class="lineHorizAll"></p>
     <p class="textM"> Circulation</p>
@@ -562,7 +562,7 @@
 
 
   <!--photos -->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <p class="titleL">PHOTOS </p>
     <p class="lineHorizAll"></p>
     <p class="textM">Structure </p>
@@ -574,7 +574,7 @@
   <div class="blankHXL"></div>
 
   <!--photos -->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
 
     <P class="titleL">PHOTOS</P>
     <p class="lineHorizAll"></p>
@@ -588,7 +588,7 @@
   <div class="blankHXL"></div>
 
   <!--photos -->
-  <div class="column marginAll marginAll1920">
+  <div class="column marginAll marginAll">
     <p class="titleL">PHOTOS</p>
     <p class="lineHorizAll"></p>
     <p class="textM"> Perspective </p>
