--- a/project/appointment_maker/index.html
+++ b/project/appointment_maker/index.html
@@ -3,7 +3,6 @@
 <head>
   <link rel="stylesheet" href="../../main.css">
   <script type="text/javascript" src="../../scripts.js"></script>
-  <script type="text/javascript" src="scripts.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -121,7 +120,7 @@
   <!--about appointmentmaker-->
 
   <div class="colorGrey">
-    <div class="blankPhone"></div>
+    <div class="blankProjectS"></div>
 
     <div class="column centerVer">
 
@@ -260,10 +259,10 @@
   <div class="blankHM"></div>
 
 
-  <div CLASS="marginAll marginAll1920 centerHorz  rowChng">
-    <div class="column marginS float alignCPH widthXS padding-s shadowOnly border-radius">
+  <div CLASS="marginAll marginAll centerHorz  rowChng">
+    <div class="column marginS float alignCPH widthXS padding-s ShadowBox border-radius">
       <P class="titleM"> Empathize </P>
-      <div class="lineHorizS"></div>
+      <div class="lineHorizSmallAM"></div>
       <div class="blankHXS"></div>
 
       <ul class="column align-botton">
@@ -274,9 +273,9 @@
     </div>
     <div class="blankHM"></div>
 
-    <div class="column marginS float alignCPH widthXS padding-s shadowOnly border-radius">
+    <div class="column marginS float alignCPH widthXS padding-s ShadowBox border-radius">
       <P class="titleM"> Define </P>
-      <div class="lineHorizS"></div>
+      <div class="lineHorizSmallAM"></div>
       <div class="blankHXS"></div>
 
       <ul class="column align-botton">
@@ -287,9 +286,9 @@
     </div>
     <div class="blankHM"></div>
 
-    <div class="column marginS float alignCPH widthXS padding-s shadowOnly border-radius">
+    <div class="column marginS float alignCPH widthXS padding-s ShadowBox border-radius">
       <P class="titleM"> Ideate </P>
-      <div class="lineHorizS"></div>
+      <div class="lineHorizSmallAM"></div>
       <div class="blankHXS"></div>
 
       <ul class="column align-botton">
@@ -302,9 +301,9 @@
     </div>
     <div class="blankHM"></div>
 
-    <div class="column marginS float alignCPH widthXS padding-s shadowOnly border-radius">
+    <div class="column marginS float alignCPH widthXS padding-s ShadowBox border-radius">
       <P class="titleM"> Design </P>
-      <div class="lineHorizS"></div>
+      <div class="lineHorizSmallAM"></div>
       <div class="blankHXS"></div>
 
       <ul class="column align-botton">
@@ -316,9 +315,9 @@
     </div>
     <div class="blankHM"></div>
 
-    <div class="column marginS float alignCPH widthXS padding-s shadowOnly border-radius">
+    <div class="column marginS float alignCPH widthXS padding-s ShadowBox border-radius">
       <P class="titleM"> Testing </P>
-      <div class="lineHorizS"></div>
+      <div class="lineHorizSmallAM"></div>
       <div class="blankHXS"></div>
 
       <ul class="column align-botton">
@@ -339,7 +338,7 @@
   <div class="blankHXS"></div>
   <!--step progress bar-->
 
-  <div class="stepper-wrapper marginAllL marginAllL1920">
+  <div class="stepper-wrapper marginAllL marmarginAllLginAll">
     <div class="stepper-item completed active">
       <div class="step-counter"></div>
       <div class="step-name">Empathize</div>
@@ -380,7 +379,7 @@
 
 
   <div class="colorGrey">
-    <div class="column centerVer marginAll marginAll1920">
+    <div class="column centerVer marginAll marginAll">
 
       <div class="blankHM"></div>
 
@@ -398,10 +397,10 @@
       </div>
       <div class="blankHS"></div>
 
-      <img class="shadowOnly float " src="personas01.svg" alt="Appointment Maker">
+      <img class="ShadowBox float " src="personas01.svg" alt="Appointment Maker">
       <div class="blankHM"></div>
 
-      <img class="shadowOnly float " src="personas02.svg" alt="Appointment Maker">
+      <img class="ShadowBox float " src="personas02.svg" alt="Appointment Maker">
 
       <div class="blankHM"></div>
 
@@ -412,7 +411,7 @@
   <div class="blankHM"></div>
 
 
-  <div class="marginAll1920 marginAll">
+  <div class="marginAll marginAll">
     <div class="column centerVer">
       <div class="column centerVer">
         <P class="titleL">User Journey Map</P>
@@ -559,7 +558,7 @@
   <div class="blankHXS"></div>
 
   <!--step progress bar-->
-  <div class="stepper-wrapper marginAllL marginAllL1920">
+  <div class="stepper-wrapper marginAllL marmarginAllLginAll">
     <div class="stepper-item completed inactive">
       <div class="step-counter"></div>
       <div class="step-name">Empathize</div>
@@ -596,7 +595,7 @@
   </div>
 
   <div class="blankHM"></div>
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
 
     <P class="titleL">Define problems</P>
     <div class="lineVerS"></div>
@@ -624,7 +623,7 @@
   </div>
 
   <!--step progress bar-->
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <P class="titleL">Competitive audit</P>
     <div class="blankHS"></div>
 
@@ -1230,7 +1229,7 @@
 
   <div class="blankHL"></div>
 
-  <div class="column centerVer marginAll marginAll1920">
+  <div class="column centerVer marginAll marginAll">
     <P class="titleM">Competitive audit report</P>
     <div class="blankHS"></div>
 
@@ -1260,7 +1259,7 @@
 
   <div class="rowChng centerHorz alignCPH">
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column ">
         <P class="titleM">Competitive audit goal </P>
@@ -1275,7 +1274,7 @@
     </div>
 
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Key competitors:</P>
@@ -1294,7 +1293,7 @@
     </div>
 
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Quality of competitors&apos; products:</P>
@@ -1317,7 +1316,7 @@
 
   <div class="rowChng centerHorz alignCPH">
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors market</P>
@@ -1339,7 +1338,7 @@
     </div>
 
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors self promotion:</P>
@@ -1360,7 +1359,7 @@
     </div>
 
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors&apos; strengths: </P>
@@ -1391,7 +1390,7 @@
 
 
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Competitors&apos; weaknesses </P>
@@ -1410,7 +1409,7 @@
       </div>
     </div>
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Gaps </P>
@@ -1428,7 +1427,7 @@
       </div>
     </div>
     <div
-      class="row align-top widthS padding-s marginElm float align-left shadowOnly border-radius  ">
+      class="row align-top widthS padding-s marginElm float align-left ShadowBox border-radius  ">
       <img class="widthIconS" src="list.svg" alt="&bull;">
       <div class="column">
         <P class="titleM">Opportunities: </P>
@@ -1452,7 +1451,7 @@
   <P class="centerHorz titleL">Ideate</P>
   <div class="blankHXS"></div>
   <!--step progress bar-->
-  <div class="stepper-wrapper marginAllL marginAllL1920">
+  <div class="stepper-wrapper marginAllL marmarginAllLginAll">
     <div class="stepper-item completed inactive">
       <div class="step-counter"></div>
       <div class="step-name">Empathize</div>
@@ -1499,7 +1498,7 @@
   <P class="centerHorz titleL">Design</P>
   <div class="blankHXS"></div>
   <!--step progress bar-->
-  <div class="stepper-wrapper marginAllL marginAllL1920">
+  <div class="stepper-wrapper marginAllL marmarginAllLginAll">
     <div class="stepper-item completed inactive">
       <div class="step-counter"></div>
       <div class="step-name">Branding</div>
@@ -1550,7 +1549,7 @@
 
   <div class="blankHXS"></div>
   <!--step progress bar-->
-  <div class="stepper-wrapper marginAllL marginAllL1920">
+  <div class="stepper-wrapper marginAllL marmarginAllLginAll">
     <div class="stepper-item completed inactive">
       <div class="step-counter"></div>
       <div class="step-name">Empathize</div>
