--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -120,17 +120,15 @@
 
   <!--about gardenershub-->
   <div class="colorGrey" id="bg-color-trigger">
-    <div class="blankPhone"></div>
+    <div class="blankProject"></div>
 
-    <div class="blankHS"></div>
 
     <div class="rowChng centerHorz centerVer alignCPH">
       <img src="../../layout_gardenershub.png" alt="Meal Planner" class="widthXL">
       <div class="column widthMPhHalf">
         <P class="titleL">GARDENERS HUB</P>
         <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design,
-          Visual Design, Interaction Design, Wireframing, Branding, Prototyping, Usability Testing
+        <p class="textS"> <strong>My Role:</strong> &nbsp; Design Research, UX/UI Design, Wireframing, Branding, Prototyping, Usability Testing
         </p>
         <p class="textS"> <strong>Skills and Tools:</strong> &nbsp;
           HTML, CSS, JavaScript, JQuery,
@@ -142,7 +140,7 @@
       </div>
     </div>
     <div class="blankHM"></div>
-
+    <div class="blankProjectS"></div>
   </div>
 
 
@@ -151,7 +149,7 @@
   <div class="blankHXL"></div>
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Initial Concepts </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
@@ -159,10 +157,10 @@
   <!-- initial concepts -->
 
 
-  <div class="marginAll marginAll1920 rowChng">
+  <div class="marginAll marginAll rowChng">
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon svg float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
-      <P class="lineHorizSGH colorGHbg1"> </P>
+      <P class="lineHorizSmallAMGH colorGHbg1"> </P>
       <P class="titleM"> Share &amp; Sell </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Nearby</P>
@@ -172,7 +170,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Social Network </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Local Network</P>
@@ -182,7 +180,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Profile </P>
       <div class="blank-lineheight-s"></div>
 
@@ -193,7 +191,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Care </P>
       <div class="blank-lineheight-s"></div>
 
@@ -229,7 +227,7 @@
 
   <!-- content-->
   <!--Img 1-->
-  <div id="ytrigger-gh1" class="rowChng rowChngRV centerVer marginAll marginAll1920">
+  <div id="ytrigger-gh1" class="rowChng rowChngRV centerVer marginAll marginAll">
     <div class="column">
       <p class="titleL">Sell and Share</p>
       <p class="lineHorizAll"></p>
@@ -241,7 +239,7 @@
   <div class="blankHL"></div>
 
   <!--img 2-->
-  <div class="rowChng centerVer marginAll marginAll1920" id="ytrigger-gh2">
+  <div class="rowChng centerVer marginAll marginAll" id="ytrigger-gh2">
     <img src="solution_socialnetwork.png" class="widthL" alt="DIAGRAM">
     <div class="blankVer">
     </div>
@@ -258,7 +256,7 @@
   <div class="blankHL"></div>
 
   <!--Img 3-->
-  <div id="ytrigger-gh3" class="rowChng rowChngRV centerVer marginAll marginAll1920">
+  <div id="ytrigger-gh3" class="rowChng rowChngRV centerVer marginAll marginAll">
     <div class="column">
       <p class="titleL">Plant Profile</p>
       <p class="lineHorizAll"></p>
@@ -271,7 +269,7 @@
   <div class="blankHL"></div>
 
   <!--img 4-->
-  <div class="rowChng centerVer marginAll marginAll1920" id="ytrigger-gh4">
+  <div class="rowChng centerVer marginAll marginAll" id="ytrigger-gh4">
     <img class="widthL" src="solution_account.png" alt="DIAGRAM">
     <div class="blankVer">
     </div>
@@ -290,13 +288,13 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Case Study </p>
     <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
   <!--Problem and solution-->
-  <div class="rowChng align-top marginAll1920 marginAll">
+  <div class="rowChng align-top marginAll marginAll">
     <div class="column">
       <P class="titleL">PROBLEMS</P>
       <p class="lineHorizAll"></p>
@@ -335,11 +333,11 @@
 
   <!--design thinking process-->
 
-  <div class="rowChng centerHorz align-top marginAll1920 marginAll centerPhone">
+  <div class="rowChng centerHorz align-top marginAll marginAll centerPhone">
 
     <div class="column centerVer">
       <P class="centerVer centerHorz colorGreyShadow circleGH titleL">Empathize </P>
-      <div class="blankHM"></div>
+      <div class="blankHS"></div>
       <P class="textS"> &#183; User Research</P>
       <P class="textS"> &#183; Competitive Analysis </P>
     </div>
@@ -348,7 +346,7 @@
 
     <div class="column centerVer">
       <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Define </P>
-      <div class="blankHM"></div>
+      <div class="blankHS"></div>
 
       <P class="textS"> &#183; Contextual Inquiries </P>
       <P class="textS"> &#183; Identifying Pain Points </P>
@@ -357,7 +355,7 @@
 
     <div class="column centerVer">
       <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Ideate </P>
-      <div class="blankHM"></div>
+      <div class="blankHS"></div>
       <P class="textS"> &#183; Information Architecture</P>
       <P class="textS"> &#183; User Flow </P>
       <P class="textS"> &#183; Selected Initial Concepts </P>
@@ -366,7 +364,7 @@
     <div class="column centerVer">
       <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Prototype
       </P>
-      <div class="blankHM"></div>
+      <div class="blankHS"></div>
 
       <P class="textS"> &#183; Prototyping </P>
       <P class="textS"> &#183; Iteration Testing</P>
@@ -375,7 +373,7 @@
 
     <div class="column centerVer">
       <P class="centerVer centerHorz colorGreyShadow circleGH  titleL">Final Design </P>
-      <div class="blankHM"></div>
+      <div class="blankHS"></div>
 
       <P class="textS"> &#183; On-boarding</P>
       <P class="textS"> &#183; Login & Register </P>
@@ -391,7 +389,7 @@
   <!--design thinking process-->
 
   <!-- 01 -->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <P class="textNos colorGH">01</P>
     <div class="rowChng centerVer">
       <div class="column">
@@ -414,8 +412,8 @@
           <p class="titleS">User Research</p>
         </div>
 
-        <div class="column centerVer"> <img class="widthIconM marginIcon float" src="icon_competitor.svg"
-            alt="User Research">
+        <div class="column centerVer"> <img class="widthIconM marginIcon float"
+            src="icon_competitor.svg" alt="User Research">
           <p class="titleS">Competitive Analysis</p>
         </div>
       </div>
@@ -1068,7 +1066,7 @@
   <div class="blankHXL"></div>
 
   <!-- 02 -->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <P class="textNos colorGH">02</P>
     <div class="rowChng centerVer">
       <div class="column">
@@ -1107,13 +1105,13 @@
   </div>
 
   <div class="blankHM"></div>
-  <div class="colorGHBg1 align-bottom" >
+  <div class="colorGHBg1 align-bottom">
 
-    <div class="marginAll marginAll1920 rowChng centerHorz">
+    <div class="marginAll marginAll rowChng centerHorz">
 
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_1.svg" alt="User Research">
-        <P class="lineHorizSGH"> </P>
+        <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Method </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1124,7 +1122,7 @@
 
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float ">
         <img class="widthLogo paddingS" src="icon_ci_2.svg" alt="User Research">
-        <P class="lineHorizSGH"> </P>
+        <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Pain Points </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1134,7 +1132,7 @@
       </div>
       <div class="column centerVer colorGreyShadow border-radius heightM widthS marginIcon float">
         <img class="widthLogo paddingS" src="icon_ci_3.svg" alt="User Research">
-        <P class="lineHorizSGH"> </P>
+        <P class="lineHorizSmallAMGH"> </P>
         <P class="titleM"> Wishlist </P>
         <div class="blank-lineheight-s"></div>
 
@@ -1145,7 +1143,7 @@
     </div>
   </div>
   <div class="blankHXL"></div>
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <div class="rowChng centerVer">
       <div class="column">
         <P class="titleM">Key Findings from the Contextual Inquiries </P>
@@ -1285,7 +1283,7 @@
   <!-- 03 IDEATION -->
 
   <P class="textNos colorGH">03</P>
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
 
     <div class="rowChng centerVer">
       <div class="column">
@@ -1322,14 +1320,19 @@
     <!-- information architecture -->
     <div class="column">
       <P class="titleM">INFORMATION ARCHITECTURE </P>
+      <div class="blankHXS"></div>
+
       <p class="textM">It shows the features and services under each phase of the application
         to get a clear view of how the app will look at each level of hierarchy in terms of
         functionality</p>
+
     </div>
+
+    <div class="blankHS"></div>
+
     <div class="centerHorz">
-      <div class="widthL">
-        <img class="float" src="ideation_infor_arch.svg" alt="User Research">
-      </div>
+        
+        <img class="widthL shadowFilter" src="ideation_infor_arch.svg" alt="User Research">
     </div>
     <!-- information architecture -->
     <div class="blankHL"></div>
@@ -1337,14 +1340,18 @@
     <!-- user flow -->
     <div class="column">
       <P class="titleM">USER FLOW </P>
+      <div class="blankHS"></div>
+
       <p class="textM">this user flow lays out the path taken by a prototypical user on this app
         to
         complete a task. The user flow takes our gardeners from their entry point through a set of
         steps towards a successful outcome and final action, such as purchasing a product. </p>
     </div>
+    <div class="blankHS"></div>
+
 
     <div class="centerHorz">
-      <div class="widthL float">
+      <div class="widthL">
         <svg width="881px" height="966px" viewBox="0 0 881 966" version="1.1"
           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <title>Page 1</title>
@@ -2585,7 +2592,7 @@
   <div class="blankHL"></div>
 
   <!-- initial concepts -->
-  <div class="marginAll marginAll1920 column">
+  <div class="marginAll marginAll column">
     <P class="titleM">PURPOSE OF THE APP </P>
     <div class="blank-lineheight-s"></div>
 
@@ -2604,10 +2611,10 @@
   <div class="blankHL"></div>
 
 
-  <div class="marginAll marginAll1920 rowChng ">
+  <div class="marginAll marginAll rowChng ">
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts1.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Share &amp; Sell </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Nearby</P>
@@ -2617,7 +2624,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts2.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Social Network </P>
       <div class="blank-lineheight-s"></div>
       <P class="textS"> &#183; Local Network</P>
@@ -2627,7 +2634,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts3.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Profile </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2638,7 +2645,7 @@
     </div>
     <div class="column centerVer colorGreyShadow border-radius heightL widthS marginIcon float">
       <img class="widthLogo paddingS" src="icon_concepts4.svg" alt="User Research">
-      <P class="lineHorizSGH"> </P>
+      <P class="lineHorizSmallAMGH"> </P>
       <P class="titleM"> Plant Care </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2652,7 +2659,7 @@
   <!-- 03 -->
 
   <!-- 04 -->
-  <div class="marginAll marginAll1920">
+  <div class="marginAll marginAll">
     <P class="textNos colorGH">04</P>
 
     <div class="rowChng centerVer">
@@ -2720,7 +2727,7 @@
 
   <!-- wireframes mid-fi -->
 
-  <P class="titleM marginAll1920 marginAll">MID-FIDELITY WIREFRAMES </P>
+  <P class="titleM marginAll marginAll">MID-FIDELITY WIREFRAMES </P>
   <div class="blankHL"></div>
 
   <div class="carouselGH">
@@ -2811,7 +2818,7 @@
   <div class="colorGHBg">
 
     <div class="blankHM"></div>
-    <div class="marginAll marginAll1920">
+    <div class="marginAll marginAll">
       <P class="titleM ">HIGH-FIDELITY WIREFRAMES </P>
       <div class="blankHM"></div>
 
@@ -2842,7 +2849,7 @@
           <img class="widthS widthS1920" src="hf_rg1.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
-          <img class="widthS widthS1920"  src="hf_rg2.png" alt="HIGH-FIDELITY WIREFRAMES">
+          <img class="widthS widthS1920" src="hf_rg2.png" alt="HIGH-FIDELITY WIREFRAMES">
         </div>
         <div class="slideGH">
           <img class="widthS widthS1920" src="hf_rg3.png" alt="HIGH-FIDELITY WIREFRAMES">
@@ -2911,6 +2918,14 @@
     </div>
     <div class="blankHL"></div>
 
+
+    <p class=" tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
+    <p class="displayNonePhone textM centerHorz" data-aos="fade-up">Learn more about my works
+      &nbsp; <a class="textProject" href="/project">here</a> </p>
+  
+  
+    <div class="blankHL"></div>
+  
   </div>
   <!-- wireframes hi-fi -->
   <!-- 04 -->
