--- a/project/index.html
+++ b/project/index.html
@@ -121,8 +121,7 @@
   <!--body-->
   <!--intro-->
 
-  <div class="blankHL"></div>
-  <div class="blankPhoneS"></div>
+  <div class="blankProject"></div>
   <div class="landingIntro">
     <div class="intro">
       <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -145,9 +144,12 @@
     </div>
 
     <div class="t-intro zTop" data-aos="fade-up">
-      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. Some of
-      the apps I have designed recently. Currently attending Google UX Certificate courses more
-      projects coming soon. Any improvements or advice would be greatly appreciated.</div>
+      I built and update this website myself from scratch using HTML/CSS/JS deployed on AWS. if you
+      like any of my design component, please visit my <a href="https://github.com/vicky-wyq"
+        class="textIntro">GitHub</a> repository. Currently
+      attending Google UX <a href="https://s3.us-west-1.amazonaws.com/vickywang.me/Google+UX+Certificate.pdf"
+        class="textIntro">Certificate</a> courses more projects coming soon. Any
+      improvements or advice would be greatly appreciated.</div>
   </div>
   <div class="blankHM"></div>
 
@@ -159,132 +161,128 @@
 
 
   <!-- content-->
-  <div class="row marginAll heightM centerVer marginAll1920">
+  <div class="row marginAll heightM centerVer marginAll">
     <p class="tArrow"> Selected Projects </p>
     <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
   </div>
   <!-- content-->
-  <!--MEAL PLANNER-->
-  <div id="ytrigger3">
-
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a href="/project/meal_planner">
-        <img src="../layout_mealplanner.png" alt="Meal Planner">
-      </a>
-      <div class="blankVer">
-      </div>
-      <div class="column widthM">
-        <a href="/project/meal_planner" class="titleL" data-aos="fade-up">MEAL PLANNER</a>
-        <p class="lineHorizAll"></p>
-
-        <p class="textS textItalic">May 2021 - August 2021</p>
-        <div class="blankHXS"></div>
-
-        <p class="textM">A mobile app helps planning a healthy meal</p>
-      </div>
-    </div>
-  </div>
-  <!--MEAL PLANNER-->
-  <div class="blankHL"></div>
-  <!--GARDENERS HUB-->
-  <div id="ytrigger4">
-
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
-      <div class="column widthM">
-        <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
-        <p class="lineHorizAll"></p>
-
-        <p class="textS textItalic">May 2021 - August 2021</p>
-
-        <p class="textM">A marketplace for local community</p>
-
-      </div>
-      <div class="blankVer">
-      </div>
-      <a href="/project/gardeners_hub">
-        <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
-      </a>
-    </div>
-  </div>
-  <!--GARDENERS HUB-->
-
-  <div class="blankHL"></div>
-
   <!--APPOINTMENTMAKER-->
-  <div id="ytrigger">
 
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <a href="/project/appointment_maker">
-        <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
-      </a>
-      <div class="blankVer">
-      </div>
-      <div class="column widthM">
-        <a href="/project/appointment_maker" class="titleL" data-aos="fade-up">Appointment
-          Maker</a>
-        <p class="lineHorizAll"></p>
-        <p class="textS textItalic">Ongoing</p>
-        <p class="textM"> Google UX Certificate Project 1</p>
-        <p class="textM"> A scheduling app for making appointment
-          makers</p>
-        <p class="textM"> 4 Weeks</p>
-      </div>
+  <div class="rowChng marginAll marginAll centerHorz centerVer">
+    <a href="/project/appointment_maker">
+      <img src="../layout_AppointmentMaker.png" alt="Appointment Maker">
+    </a>
+    <div class="blankVer">
+    </div>
+    <div class="column widthM">
+      <a href="/project/appointment_maker" class="titleL" data-aos="fade-up">Appointment
+        Maker</a>
+      <p class="lineHorizAll"></p>
+      <p class="textS textItalic">Ongoing</p>
+      <p class="textS"> <strong>Project 1:</strong> &nbsp; Google UX Certificate</p>
+      <p class="textS"> <strong>About:</strong> &nbsp; A scheduling app for making appointment
+        makers</p>
+      <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
+
     </div>
   </div>
   <!--APPOINTMENTMAKER-->
   <div class="blankHL"></div>
+  <!--MEAL PLANNER-->
+
+  <div class="rowChng marginAll marginAll centerHorz centerVer">
+    <div class="column widthM">
+      <a href="/project/meal_planner" class="titleL" data-aos="fade-up">MEAL PLANNER</a>
+      <p class="lineHorizAll"></p>
+
+      <p class="textS textItalic">May 2021 - August 2021</p>
+      <div class="blankHXS"></div>
+      <p class="textM">A mobile app helps planning a healthy meal</p>
+    </div>
+    <div class="blankVer">
+    </div>
+    <a href="/project/meal_planner">
+      <img src="../layout_mealplanner.png" alt="Meal Planner">
+    </a>
+  </div>
+  <!--MEAL PLANNER-->
+  <div class="blankHL"></div>
+  <!--GARDENERS HUB-->
+
+  <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
+
+    <a href="/project/gardeners_hub">
+      <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
+    </a>
+    <div class="blankVer">
+    </div>
+    <div class="column widthM">
+      <a href="/project/gardeners_hub" class="titleL" data-aos="fade-up">GARDENERS HUB</a>
+      <p class="lineHorizAll"></p>
+
+      <p class="textS textItalic">May 2021 - August 2021</p>
+
+      <p class="textM">A marketplace for local community</p>
+
+    </div>
+
+
+  </div>
+  <!--GARDENERS HUB-->
+
+  <div class="blankHL"></div>
+
+
 
   <!--Responsive Web-->
-  <div id="ytrigger1">
 
 
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+  <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
-      <div class="column widthM">
-        <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
-        <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 2</p>
-        <p class="textS"> <strong>About:</strong> &nbsp; A responsive website for album listening
-          & ordering for Indie Rock bands</p>
-        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="textM">Coming Soon</p>
-      </div>
-      <div class="blankVer">
-      </div>
-      <p href="/project/indie">
-        <img src="../layout_IndieRockbands.png" alt="Meal Planner">
-      </p>
+    <div class="column widthM">
+      <p href="/project/indie" class="titleL" data-aos="fade-up">Indie Rock bands Website</p>
+      <p class="lineHorizAll"></p>
+      <p class="textS textItalic">Coming Soon</p>
+
+      <p class="textS"> <strong>Project 2:</strong> &nbsp; Google UX Certificate</p>
+      <p class="textS"> <strong>About:</strong> &nbsp; A responsive website for album listening
+        & ordering for Indie Rock bands</p>
+      <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
     </div>
+    <div class="blankVer">
+    </div>
+    <p href="/project/indie">
+      <img src="../layout_IndieRockbands.png" alt="Meal Planner">
+    </p>
   </div>
   <!--Responsive Web-->
   <div class="blankHL"></div>
 
   <!--Social Good-->
-  <div id="ytrigger2">
 
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
+  <div class="rowChng marginAll marginAll centerHorz centerVer">
 
-      <p href="/project/meal_planner">
-        <img src="../layout_MedicationReminder.png" alt="Meal Planner">
-      </p>
-      <div class="blankVer">
-      </div>
-      <div class="column widthM">
-        <p href="/project/meal_planner" class="titleL" data-aos="fade-up">Medication Reminder</p>
-        <p class="lineHorizAll"></p>
-        <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
-        <p class="textS"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
-          to take medicine on time</p>
-        <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
-        <p class="textM">Coming Soon</p>
-      </div>
+    <p href="/project/meal_planner">
+      <img src="../layout_MedicationReminder.png" alt="Meal Planner">
+    </p>
+    <div class="blankVer">
+    </div>
+    <div class="column widthM">
+      <p href="/project/meal_planner" class="titleL" data-aos="fade-up">Medication Reminder</p>
+      <p class="lineHorizAll"></p>
+      <p class="textS textItalic">Coming Soon</p>
 
+      <p class="textS"> <strong>Project:</strong> &nbsp; Google UX Certificate Project 3</p>
+      <p class="textS"> <strong>About:</strong> &nbsp; A cross-platform to help people remember
+        to take medicine on time</p>
+      <p class="textS"> <strong>Duration:</strong> &nbsp; 4 Weeks</p>
     </div>
 
   </div>
+
   <!--Social Good-->
   <div class="blankHXL"></div>
 
