--- a/photography/index.html
+++ b/photography/index.html
@@ -2,9 +2,8 @@
 
 <head>
   <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../../scripts.js"></script>
+  <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="scripts.js"></script>
-
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -114,8 +113,7 @@
   </div>
   <!--head-->
   <!--body-->
-  <div class="blankHL"></div>
-  <div class="blankPhoneS"></div>
+  <div class="blankProject"></div>
 
   <div class="landingIntro">
     <div class="intro">
@@ -150,12 +148,12 @@
 
   <!--Photo 1-->
   <div id="ytrigger-pg">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./01.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./01.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL" data-aos="fade-up">Bosque Del Apache National Wildlife Refuge</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -169,17 +167,17 @@
 
 
   <div id="ytrigger-pg2">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL" data-aos="fade-up">Bosque Del Apache National Wildlife Refuge</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./02.jpg">
+      <img class="ShadowBox widthXL" src="./02.jpg">
     </div>
 
 
@@ -189,12 +187,12 @@
 
   <!--Photo 3-->
   <div id="ytrigger-pg3">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./03.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./03.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">Bosque Del Apache National Wildlife Refuge</p>
+        <p class="titleL" data-aos="fade-up">Bosque Del Apache National Wildlife Refuge</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -208,17 +206,18 @@
 
   <div id="ytrigger-pg4">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL" data-aos="fade-up">Sacramento National Wildlife Refuge
+        </p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./04.jpg">
+      <img class=" ShadowBox widthXL" src="./04.jpg">
     </div>
 
   </div>
@@ -229,12 +228,13 @@
   <!--Photo 5-->
   <div id="ytrigger-pg5">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./05.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./05.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL" data-aos="fade-up">Sacramento National Wildlife Refuge
+        </p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -246,17 +246,18 @@
 
   <!--Photo 6-->
   <div id="ytrigger-pg6">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p href="/Photography" class="titleL">Sacramento National Wildlife Refuge</p>
+        <p href="/Photography" class="titleL" data-aos="fade-up">Sacramento National Wildlife Refuge
+        </p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./06.jpg">
+      <img class="ShadowBox widthXL" src="./06.jpg">
     </div>
   </div>
   <!--Photo 6-->
@@ -264,12 +265,12 @@
 
   <!--Photo 7-->
   <div id="ytrigger-pg7">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./07.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./07.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">Teton National Park </p>
+        <p class="titleL" data-aos="fade-up">Teton National Park </p>
         <p class="lineHorizAll"></p>
         <p class="textM">September, 2020</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -282,17 +283,17 @@
 
   <!--Photo 8-->
   <div id="ytrigger-pg8">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./08.jpg">
+      <img class="ShadowBox widthXL" src="./08.jpg">
     </div>
   </div>
   <!--Photo 8-->
@@ -301,12 +302,12 @@
   <!--Photo 9-->
   <div id="ytrigger-pg9">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./09.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./09.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -318,17 +319,17 @@
 
   <!--Photo 10-->
   <div id="ytrigger-pg10">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./10.jpg">
+      <img class="ShadowBox widthXL" src="./10.jpg">
     </div>
   </div>
   <!--Photo 10-->
@@ -336,12 +337,12 @@
 
   <!--Photo 11-->
   <div id="ytrigger-pg11">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./11.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./11.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -355,17 +356,17 @@
 
   <div id="ytrigger-pg12">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./12.jpg">
+      <img class="ShadowBox widthXL" src="./12.jpg">
     </div>
   </div>
 
@@ -376,12 +377,12 @@
   <!--Photo 13-->
   <div id="ytrigger-pg13">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./13.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./13.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -394,17 +395,17 @@
   <!--Photo 14-->
   <div id="ytrigger-pg14">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">White Sands National Monument</p>
+        <p class="titleL" data-aos="fade-up">White Sands National Monument</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./14.jpg">
+      <img class="ShadowBox widthXL" src="./14.jpg">
     </div>
   </div>
   <!--Photo 14-->
@@ -413,12 +414,12 @@
 
   <!--Photo 15-->
   <div id="ytrigger-pg15">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./15.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./15.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">Yellowstone National Park</p>
+        <p class="titleL" data-aos="fade-up">Yellowstone National Park</p>
         <p class="lineHorizAll"></p>
         <p class="textM">September, 2020 </p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -431,17 +432,17 @@
   <!--Photo 16-->
   <div id="ytrigger-pg16">
 
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">Taos Pueblo Indian Reservation</p>
+        <p class="titleL" data-aos="fade-up">Taos Pueblo Indian Reservation</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./16.jpg">
+      <img class="ShadowBox widthXL" src="./16.jpg">
     </div>
   </div>
   <!--Photo 16-->
@@ -451,12 +452,12 @@
 
   <!--Photo 17-->
   <div id="ytrigger-pg17">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer">
-      <img class=" shadowOnly" src="./17.jpg">
+    <div class="rowChng marginAll marginAll centerHorz centerVer">
+      <img class="ShadowBox widthXL" src="./17.jpg">
       <div class="blankVer">
       </div>
       <div class="column widthM">
-        <p class="titleL">Donner Lake </p>
+        <p class="titleL" data-aos="fade-up">Donner Lake </p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019 </p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
@@ -468,17 +469,17 @@
 
   <!--Photo 18-->
   <div id="ytrigger-pg18">
-    <div class="rowChng marginAll marginAll1920 centerHorz centerVer rowChngRV">
+    <div class="rowChng marginAll marginAll centerHorz centerVer rowChngRV">
 
       <div class="column widthM">
-        <p class="titleL">Yellowstone National Park</p>
+        <p class="titleL" data-aos="fade-up">Yellowstone National Park</p>
         <p class="lineHorizAll"></p>
         <p class="textM">December, 2019</p>
         <p class="textM">Canon 5d mark iii | EF 70-200mm f/2.8L IS II</p>
       </div>
       <div class="blankVer">
       </div>
-      <img class=" shadowOnly" src="./19.jpg">
+      <img class="ShadowBox widthM" src="./19.jpg">
     </div>
   </div>
   <!--Photo 18-->
